infrastructure/vpc.tf
resource "aws_vpc" "dream-os_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true
  
  tags = {
    Name        = "dream-os-vpc"
    Environment = "production"
  }
}
